# sentinel-risk-engine

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
docs/: DESIGN.md  MODEL_CARD.md
ml/: README.md  pyproject.toml
ml/sentinel_ml/: __init__.py  cli.py  config.py  evaluate.py  export_onnx.py  features.py  generate.py  geo.py  train.py
ml/tests/: test_features.py  test_generate.py
web/: drizzle.config.ts  next.config.ts  package.json  pnpm-lock.yaml
web/data/: demo_seed.json  parity_samples.json
web/drizzle/: 0000_careful_roxanne_simpson.sql
web/drizzle/meta/: 0000_snapshot.json  _journal.json
web/public/: metrics.json
web/public/demo/: demo_stream.json
web/public/model/: feature_spec.json  model.onnx  model_trees.json
web/scripts/: parity-check.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/events/: route.ts
web/src/app/api/feedback/: route.ts
web/src/app/api/reset/: route.ts
web/src/app/api/score/: route.ts
web/src/app/api/seed/: route.ts
web/src/app/api/stats/: route.ts
web/src/app/model/: page.tsx
web/src/components/dashboard/: BandPill.tsx  Charts.tsx  Controls.tsx  Header.tsx  Kpis.tsx  RiskFeed.tsx
web/src/lib/: format.ts
web/src/lib/client/: useSentinel.ts
web/src/lib/db/: index.ts  schema.ts
web/src/lib/scoring/: engine.ts  features.ts  geo.ts  model.ts  reasons.ts  spec.ts  types.ts  validation.ts
