[project]
name = "sentinel-ml"
version = "0.1.0"
description = "Offline ML pipeline for Sentinel: synthetic auth-event generation, feature engineering, gradient-boosted ATO risk models, calibration, and ONNX export."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "matplotlib>=3.9",
    "onnx>=1.17",
    "onnxruntime>=1.20",
    "onnxmltools>=1.12",
    "skl2onnx>=1.17",
]

[project.scripts]
sentinel = "sentinel_ml.cli:main"

[dependency-groups]
dev = ["pytest>=8.3", "ruff>=0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel_ml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E701/E702: allow the compact one-line plotting statements in evaluate.py
ignore = ["E701", "E702"]
